<resources>
    <string name="app_name">MusicPlay</string>
    <string name="genre_rock">Рок</string>
    <string name="genre_rap">Рэп</string>
    <string name="genre_metal">Металл</string>
    <string name="genre_indie">Инди</string>
    <string name="genre_label">Жанр:</string>
    <string name="genre_unknown">Не выбран</string>
    <string name="jamendo_client_missing">Укажи jamendoClientId в local.properties</string>
    <string name="jamendo_loading">Ищем трек на Jamendo...</string>
    <string name="jamendo_ready">Артист %1$s. Угадай название!</string>
    <string name="jamendo_no_audio">Трек найден, но аудио недоступно.</string>
    <string name="jamendo_error">Ошибка загрузки: %1$s</string>
    <string name="new_track">Другой трек</string>
    <string name="play_snippet">Играть фрагмент</string>
    <string name="pause_snippet">Пауза</string>
    <string name="preparing_snippet">Готовим плеер...</string>
    <string name="guess_hint">Введи название</string>
    <string name="check_answer">Проверить ответ</string>
    <string name="guess_prompt">Введите вашу версию</string>
    <string name="guess_required">Сначала введи вариант.</string>
    <string name="guess_correct">Верно! Это %1$s</string>
    <string name="guess_wrong">Пока нет. Правильный ответ: %1$s</string>
    <string name="cover_content_description">Обложка трека</string>
    <string name="play_icon_content_description">Запуск прослушивания</string>
    <string name="artist_label">Исполнитель:</string>
    <string name="artist_unknown">Неизвестен</string>
    <string name="auth_title">Вход в MusicPlay</string>
    <string name="auth_username_hint">Имя пользователя</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_login">Войти</string>
    <string name="auth_register">Зарегистрироваться</string>
    <string name="auth_status_ready">Введи логин и пароль, чтобы продолжить.</string>
    <string name="auth_status_loading">Отправляем запрос…</string>
    <string name="auth_status_success">Готово! Загружаем приложение…</string>
    <string name="auth_status_error">Ошибка: %1$s</string>
    <string name="auth_validation_username">Укажи имя от 3 символов.</string>
    <string name="auth_validation_password">Пароль должен быть не короче 6 символов.</string>
    <string name="auth_checking_session">Проверяем сохранённую сессию…</string>
    <string name="auth_config_missing">Задай authBaseUrl в local.properties.</string>
    <string name="auth_error_unknown">что-то пошло не так</string>
</resources>
